Better code organization of scss files Fix: color change for translate btn, better contrast

--- a/app/styles/modules/_global.scss
+++ b/app/styles/modules/_global.scss
@@ -93,154 +93,3 @@ img {
 p {
   line-height: 1.75;
 }
-/* MEDIA QUERY MIXINS - START*/
-@mixin mobile_md {
-  @media (min-width: 375px) {
-    @content;
-  }
-}
-@mixin mobile_lg {
-  @media (min-width: 425px) {
-    @content;
-  }
-}
-
-@mixin tablet_sm {
-  @media (min-width: 576px) {
-    @content;
-  }
-}
-@mixin tablet_md {
-  @media (min-width: 768px) {
-    @content;
-  }
-}
-
-@mixin pc_sm {
-  @media (min-width: 1024px) {
-    @content;
-  }
-}
-
-@mixin pc_md {
-  @media (min-width: 1366px) {
-    @content;
-  }
-}
-
-@mixin pc_lg {
-  @media (min-width: 1920px) {
-    @content;
-  }
-}
-@mixin pc_xl {
-  @media (min-width: 2560px) {
-    @content;
-  }
-}
-/* MEDIA QUERY MIXINS - END*/
-
-/* .wrapper {
-  max-width: 1600px;
-  margin: 0 auto;
-} */
-
-/* ANCHOR & BUTTON BASE STYLES - START */
-a {
-  display: inline-block;
-  text-decoration: none;
-  text-align: center;
-  letter-spacing: 1px;
-  transition: all 0.3s ease-in;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-a.btn {
-  padding: var(--pd-sm) var(--pd-base);
-
-  font-weight: 600;
-  text-transform: capitalize;
-  white-space: nowrap;
-
-  border-radius: 5px;
-  border: 2px solid var(--accent-darkblue);
-  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.25);
-
-  color: var(--txtClr-white);
-  background-color: var(--bgClr-accent);
-
-  &:hover {
-    background-color: var(--bgClr-white);
-    border-color: var(--bgClr-white);
-    color: var(--accent-azureblue);
-  }
-}
-
-a.btn-icon {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  font-size: var(--fs-base);
-  white-space: normal;
-
-  background-color: unset;
-  color: var(--txtClr-base);
-  border: 2px solid var(--txtClr-base);
-  border-radius: 5px;
-
-  padding: var(--pd-sm);
-
-  img {
-    width: 20px;
-    height: 20px;
-
-    @include pc_lg {
-      width: 40px;
-      height: 40px;
-    }
-  }
-
-  &:hover {
-    transform: scale(1.025);
-    color: var(--txtClr-base);
-    border: 2px solid var(--txtClr-base);
-  }
-}
-/* BUTTON BASE STYLES - END */
-
-/* FEATURES */
-noscript::before {
-  content: "Turn on your JavaScript or use a JavaScript compatible browser.";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-
-  font-size: var(--fs-md);
-  text-align: center;
-
-  padding: var(--pd-sm) var(--pd-lg);
-
-  background-color: var(--accent-alert);
-  color: var(--bgClr-white);
-
-  z-index: 5;
-}
-
-.easter-egg {
-  display: none;
-
-  &--visible {
-    display: block;
-    position: sticky;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 25%;
-    z-index: 5;
-  }
-}
