--- a/app/styles/modules/_header.scss
+++ b/app/styles/modules/_header.scss
@@ -49,7 +49,7 @@
           }
         }
         span {
-          color: var(--txtClr-base);
+          color: var(--txtClr-lightblue);
           cursor: pointer;
         }
       }
